# glass-market

./: .env.example  .gitignore  CLAUDE.md  COMPANY-COVER-IMAGE-IMPLEMENTATION.md  EXAMPLE_LISTING_NOTIFICATION.php  GMAIL_SETUP_COMPLETE.md  GMAIL_SETUP_GUIDE.md  LARAVEL_ROUTING_GUIDE.md  MOLLIE_PAYMENT_SETUP.md  MULTI-IMAGE-GUIDE.md  NOTIFICATION_SETUP_COMPLETE.md  NOTIFICATION_SYSTEM_GUIDE.md  PAYMENT_ERROR_LOGGING.md  PAYMENT_TESTING_GUIDE.md  PROFILE_FEATURES_UPDATE.md  QUICK_TEST_GUIDE.md  README-DEPLOYMENT.md  README.md  REGISTRATION_UPDATES.md  RUST_EMAIL_SERVICE_COMPLETE.md  SELLER_SHOP_PAGE.md  SUBSCRIPTION-ACCESS-RULES.md  SUBSCRIPTION_PAYMENT_FIX_SUMMARY.md  SUBSCRIPTION_TROUBLESHOOTING.md  add_subscription.php  check_subscription_issue.php  composer.json  config.php  debug-rust.php  fix_subscription.html  package-lock.json  package.json  test-all-emails.php  test-email.php  test-features.html  test-rust-mailer.php  test_registration.html  test_subscription_debug.php  test_subscription_display.html  test_tabs.js  (+1 more)
database/: add_email_verified_column.sql  add_image_column.sql  add_user_subscriptions.sql  check_subscriptions.sql  create_cms_tables.sql  fix_users_table.sql  glass-market.sql  glass_market (1).sql  glass_market (2).sql  glass_market.sql  make_user_admin.sql  mollie_payments.sql  seed-database.php  setup_notifications.sql  test_subscription_query.sql  update_about_page_sections.sql  update_existing_users.sql  workingdb_musie.sql
email-service/: Cargo.toml  README.md
email-service/src/: main.rs
includes/: admin-guard.php  db_connect.php  (+11 more)
(+113 files in other folders)
